# colddfs

./: .gitignore  CMakeLists.txt  README.md
exp/: batch.c  batch_block.c  block_size.c  fileaware.c  leastloaded.c  medium_file.c  prepostallocate.c  rand.c  roundrobin.c  simple.c  truncation.c  weightedroundrobin.c
include/: allocationpolicy.h  bitmap.h  communication.h  datanode.h  globals.h  metadatanode.h  metric.h
old_results/: process.py  results_fill_fileaware_web_realistic_4nodes.csv  results_fill_fileaware_web_realistic_8nodes.csv  results_fill_leastloaded_web_realistic_4nodes.csv  results_fill_leastloaded_web_realistic_8nodes.csv  results_fill_rand_web_realistic_4nodes.csv  results_fill_rand_web_realistic_8nodes.csv  results_fill_roundrobin_web_realistic_4nodes.csv  results_fill_roundrobin_web_realistic_8nodes.csv  results_fill_sequential_web_realistic_4nodes.csv  results_fill_sequential_web_realistic_8nodes.csv  results_fill_weightedroundrobin_web_realistic_4nodes.csv  results_fill_weightedroundrobin_web_realistic_8nodes.csv  results_mixed_fileaware_web_realistic_8nodes.csv  results_mixed_leastloaded_web_realistic_8nodes.csv  results_mixed_rand_web_realistic_8nodes.csv  results_mixed_roundrobin_web_realistic_8nodes.csv  results_mixed_sequential_web_realistic_8nodes.csv  results_mixed_weightedroundrobin_web_realistic_8nodes.csv  visualize.py
report/: abstract.tex  analysis.tex  appendices.tex  futurework.tex  implementation.tex  introduction.tex  main.tex  methodology.tex  packages.tex  references.tex  refs.bib  results.tex  svg.sh
report/images/: architecture.dot  architecture.mmd  metadata_struct.mmd
results/: postalloc.txt  visualize.py
results/batch/: batchalloc.txt  compare.csv  plot_bench.py  prealloc.txt
results/batch/block/: 128k.txt  16k.txt  1m.txt  256k.txt  32k.txt  4k.txt  512k.txt  65k.txt  8k.txt  avg.csv  avg_seq.csv  plot_blocks.py  summary.csv  summary16m.csv
results/blocks/: block_128k.csv  block_16k.csv  block_1m.csv  block_256k.csv  block_2m.csv  block_32k.csv  block_4k.csv  block_512k.csv  block_64k.csv  block_8k.csv  plot_blocks.py
results/distribution/: plot_dist.py  results_distribution_summary.csv
results/fileawaretune/: plot_tune.py  results_fileaware_tuning_summary_32k.csv  results_fileaware_tuning_summary_4k.csv
results/old/: results_scaling_summary.csv
results/old/block/: block_128k.csv  block_16k.csv  block_1g.csv  block_256k.csv  block_2g.csv  block_32k.csv  block_4k.csv  block_512k.csv  block_64k.csv  block_8k.csv  plot_blocks.py
results/old/fill/: results_fill_fileaware_web_realistic_8nodes.csv  results_fill_leastloaded_web_realistic_8nodes.csv  results_fill_rand_web_realistic_8nodes.csv  results_fill_roundrobin_web_realistic_8nodes.csv  results_fill_sequential_web_realistic_8nodes.csv  results_fill_weightedroundrobin_web_realistic_8nodes.csv
results/old/imbalance/: results_imbalance_fileaware_web_realistic_8nodes.csv  results_imbalance_leastloaded_web_realistic_8nodes.csv  results_imbalance_rand_web_realistic_8nodes.csv  results_imbalance_roundrobin_web_realistic_8nodes.csv  results_imbalance_sequential_web_realistic_8nodes.csv  (+1 more)
results/scaling/: plot_scaling.py  results_node_scaling_summary.csv  results_node_scaling_summary_16.csv
src/: allocationpolicy.c  bitmap.c  communication.c  datanode.c  fileaware.c  leastloaded.c  main.c  metadatanode.c  metric.c  rand.c  roundrobin.c  sequential.c  weightedroundrobin.c
workload/: block.c  datascale.c  dist.c  distribution.c  fileawaretune.c  fill.c  imbalance.c  mixed.c  readheavy.c  scaling.c  simple.c
(+12 files in other folders)
